--- a/src/style.scss
+++ b/src/style.scss
@@ -531,6 +531,20 @@ body {
           box-shadow: 0.2rem 0.3rem #2748ff, 0.3rem 0.4rem #851212,
             0.4rem 0.5rem #838512;
           position: relative;
+          display: flex;
+          flex-direction: column;
+          text-align: center;
+          align-items: center;
+
+          .menu-Card-Title-Wrap {
+            width: 90%;
+            text-align: start;
+            .menu-Card-Text-1 {
+              font-family: $fontThree;
+              font-size: 1rem;
+              color: white;
+            }
+          }
 
           &::before {
             content: "";
