--- a/src/style.scss
+++ b/src/style.scss
@@ -539,10 +539,19 @@ body {
           .menu-Card-Title-Wrap {
             width: 90%;
             text-align: start;
+
             .menu-Card-Text-1 {
               font-family: $fontThree;
-              font-size: 1rem;
+              font-size: 1.2rem;
               color: white;
+            }
+
+            .menu-Card-Text-2 {
+              font-family: $fontThree;
+              font-size: 1.1rem;
+              letter-spacing: 4px;
+              color: white;
+              font-weight: 500;
             }
           }
 
@@ -551,7 +560,7 @@ body {
             position: absolute;
             top: 3rem;
             width: 100px;
-            height: 5px;
+            height: 2px;
             width: 100%;
             left: 0;
             background-color: white;
