--- a/src/style.scss
+++ b/src/style.scss
@@ -535,15 +535,23 @@ body {
           flex-direction: column;
           text-align: center;
           align-items: center;
+          transition: all 250ms ease-in-out;
+          overflow: hidden;
 
           .menu-Card-Title-Wrap {
             width: 90%;
             text-align: start;
+            opacity: 0;
+            transition: all 250ms ease-in-out;
+            backdrop-filter: brightness(100%) blur(0);
+            position: relative;
+            z-index: 2;
 
             .menu-Card-Text-1 {
               font-family: $fontThree;
               font-size: 1.2rem;
               color: white;
+              backdrop-filter: brightness(100%) blur(0);
             }
 
             .menu-Card-Text-2 {
@@ -552,18 +560,55 @@ body {
               letter-spacing: 4px;
               color: white;
               font-weight: 500;
+              backdrop-filter: brightness(100%) blur(0);
             }
           }
 
           &::before {
             content: "";
             position: absolute;
+            top: 0;
+            width: 0%;
+            height: 0%;
+            left: 0;
+            z-index: 1;
+            filter: blur(55px);
+            background-color: rgba(36, 36, 36, 0.678);
+            transition: all 250ms ease-in-out;
+          }
+
+          &::after {
+            content: "";
+            position: absolute;
             top: 3rem;
             width: 100px;
             height: 2px;
-            width: 100%;
+            width: 0%;
+            z-index: 2;
             left: 0;
             background-color: white;
+            transition: all 500ms ease-in-out;
+          }
+        }
+        .menu-Card:hover {
+          box-shadow: 0.2rem 0.5rem 0.4rem #2748ff, 0.3rem 0.5rem 0.5rem #851212,
+            0.4rem 0.5rem 0.6rem #838512;
+          transform: translateY(-5%);
+
+          .menu-Card-Title-Wrap {
+            opacity: 1;
+            position: relative;
+            z-index: 15;
+            backdrop-filter: brightness(100%) blur(0);
+          }
+
+          &::before {
+            width: 100%;
+            height: 100%;
+          }
+
+          &::after {
+            width: 100%;
           }
         }
       }
