--- a/src/style.css
+++ b/src/style.css
@@ -499,16 +499,17 @@ body {
 .menu .menu-Wrap .menu-Bottom .menu-Bottom-Wrap .menu-Card:hover {
   box-shadow: 0.2rem 0.5rem 0.4rem #2748ff, 0.3rem 0.5rem 0.5rem #851212, 0.4rem 0.5rem 0.6rem #838512;
   transform: translateY(-5%);
+  cursor: pointer;
 }
 .menu .menu-Wrap .menu-Bottom .menu-Bottom-Wrap .menu-Card:hover .menu-Card-Title-Wrap {
   opacity: 1;
   position: relative;
   z-index: 15;
-  backdrop-filter: brightness(100%) blur(0);
 }
 .menu .menu-Wrap .menu-Bottom .menu-Bottom-Wrap .menu-Card:hover::before {
   width: 100%;
   height: 100%;
+  filter: blur(100);
 }
 .menu .menu-Wrap .menu-Bottom .menu-Bottom-Wrap .menu-Card:hover::after {
   width: 100%;
