--- a/src/style.css
+++ b/src/style.css
@@ -382,7 +382,7 @@ body {
   }
 }
 .menu {
-  height: 100vh;
+  height: clamp(500px, 100%, 1500px);
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -400,8 +400,10 @@ body {
   justify-content: center;
 }
 .menu .menu-Wrap .menu-Top {
+  margin-top: 5rem;
   height: 20%;
   width: 100%;
+  margin-bottom: 5rem;
 }
 .menu .menu-Wrap .menu-Top .menu-Top-Title-Wrap .menu-Title-Text {
   font-size: 7rem;
@@ -415,16 +417,19 @@ body {
 .menu .menu-Wrap .menu-Bottom {
   height: 70%;
   width: 100%;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 .menu .menu-Wrap .menu-Bottom .menu-Bottom-Wrap {
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   text-align: center;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: 4rem;
+  flex-wrap: wrap;
 }
 .menu .menu-Wrap .menu-Bottom .menu-Bottom-Wrap .menu-Card {
   margin: 1rem;
