--- a/src/style.scss
+++ b/src/style.scss
@@ -497,6 +497,7 @@ body {
       height: 20%;
       width: 100%;
       margin-bottom: 5rem;
+
       .menu-Top-Title-Wrap {
         .menu-Title-Text {
           font-size: 7rem;
@@ -531,9 +532,10 @@ body {
           margin: 1rem;
           height: 250px;
           width: 400px;
-          display: block;
           border: solid white 2px;
-          box-shadow: 0.2rem 0.3rem #2748ff, 0.3rem 0.4rem #851212,
+          box-shadow:
+            0.2rem 0.3rem #2748ff,
+            0.3rem 0.4rem #851212,
             0.4rem 0.5rem #838512;
           position: relative;
           display: flex;
@@ -595,7 +597,6 @@ body {
             content: "";
             position: absolute;
             top: 3rem;
-            width: 100px;
             height: 2px;
             width: 0%;
             z-index: 2;
@@ -604,11 +605,15 @@ body {
             transition: all 500ms ease-in-out;
           }
         }
+
         .menu-Card:hover {
-          box-shadow: 0.2rem 0.5rem 0.4rem #2748ff, 0.3rem 0.5rem 0.5rem #851212,
+          box-shadow:
+            0.2rem 0.5rem 0.4rem #2748ff,
+            0.3rem 0.5rem 0.5rem #851212,
             0.4rem 0.5rem 0.6rem #838512;
           transform: translateY(-5%);
           cursor: pointer;
+
           .menu-Card-Title-Wrap {
             opacity: 1;
             position: relative;
@@ -624,6 +629,35 @@ body {
           &::after {
             width: 100%;
           }
+        }
+      }
+    }
+  }
+}
+// menu responsvness
+@media screen and (max-width: 768px) {
+  .menu {
+    .menu-Wrap {
+      .menu-Top {
+        .menu-Top-Title-Wrap {
+          .menu-Title-Text {
+            font-size: 4rem;
+            -webkit-text-stroke: white 2px;
+          }
+        }
+      }
+
+      .menu-Bottom {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+
+        .menu-Bottom-Wrap {
+          height: 95%;
+          width: 95%;
         }
       }
     }
