--- a/src/style.scss
+++ b/src/style.scss
@@ -397,7 +397,7 @@ body {
 
             .meal-Book-Img {
               height: 100%;
-              -o-object-fit: cover;
+              object-fit: cover;
             }
           }
 
