--- a/src/style.css
+++ b/src/style.css
@@ -557,7 +557,7 @@ body {
 .menu .menu-Wrap .menu-Bottom .menu-Bottom-Wrap .menu-Card::after {
   content: "";
   position: absolute;
-  top: 3rem;
+  top: 1rem;
   height: 2px;
   width: 0%;
   z-index: 2;
@@ -590,7 +590,7 @@ body {
 
 @media screen and (max-width: 768px) {
   .menu .menu-Wrap .menu-Top .menu-Top-Title-Wrap .menu-Title-Text {
-    font-size: 4rem;
+    font-size: 3.6rem;
     -webkit-text-stroke: white 2px;
   }
 
@@ -606,5 +606,15 @@ body {
   .menu .menu-Wrap .menu-Bottom .menu-Bottom-Wrap {
     height: 95%;
     width: 95%;
+  }
+
+  .menu .menu-Wrap .menu-Bottom .menu-Bottom-Wrap .menu-Card .menu-Card-Title-Wrap .menu-Card-Text-1 {
+    font-size: 0.9rem;
+    color: white;
+  }
+
+  .menu .menu-Wrap .menu-Bottom .menu-Bottom-Wrap .menu-Card .menu-Card-Title-Wrap .menu-Card-Text-2 {
+    font-size: 0.9rem;
+    color: white;
   }
 }
