--- a/src/style.scss
+++ b/src/style.scss
@@ -596,7 +596,7 @@ body {
           &::after {
             content: "";
             position: absolute;
-            top: 3rem;
+            top: 1rem;
             height: 2px;
             width: 0%;
             z-index: 2;
@@ -641,7 +641,7 @@ body {
       .menu-Top {
         .menu-Top-Title-Wrap {
           .menu-Title-Text {
-            font-size: 4rem;
+            font-size: 3.6rem;
             -webkit-text-stroke: white 2px;
           }
         }
@@ -658,6 +658,20 @@ body {
         .menu-Bottom-Wrap {
           height: 95%;
           width: 95%;
+
+          .menu-Card {
+            .menu-Card-Title-Wrap {
+              .menu-Card-Text-1 {
+                font-size: 0.9rem;
+                color: white;
+              }
+
+              .menu-Card-Text-2 {
+                font-size: 0.9rem;
+                color: white;
+              }
+            }
+          }
         }
       }
     }
