--- a/src/style.css
+++ b/src/style.css
@@ -562,5 +562,23 @@ body {
   height: 90%;
   justify-content: space-evenly;
 }
+.contact .contact-Wrap .contact-Left {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+.contact .contact-Wrap .contact-Left .contact-Left-Text-1 {
+  padding: 0;
+  margin: 0;
+  font-family: "Lemon", serif;
+  color: #838512;
+  font-size: 3rem;
+  font-weight: 50;
+  text-shadow: 0.2rem 0.2rem black;
+}
 
 /*# sourceMappingURL=style.css.map */
