--- a/src/style.scss
+++ b/src/style.scss
@@ -691,5 +691,25 @@ body {
     width: 90%;
     height: 90%;
     justify-content: space-evenly;
+
+    .contact-Left {
+      display: flex;
+      flex-direction: column;
+      text-align: start;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
+
+      .contact-Left-Text-1 {
+        padding: 0;
+        margin: 0;
+        font-family: $fontOne;
+        color: #838512;
+        font-size: 3rem;
+        font-weight: 50;
+        text-shadow: 0.2rem 0.2rem black;
+      }
+    }
   }
 }
