--- a/src/style.css
+++ b/src/style.css
@@ -558,15 +558,15 @@ body {
   flex-direction: row;
   text-align: center;
   align-items: center;
-  width: 90%;
+  width: 70%;
   height: 90%;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 .contact .contact-Wrap .contact-Left {
   display: flex;
   flex-direction: column;
   text-align: start;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   padding: 0;
   margin: 0;
@@ -579,6 +579,14 @@ body {
   font-size: 3rem;
   font-weight: 50;
   text-shadow: 0.2rem 0.2rem black;
+}
+.contact .contact-Wrap .contact-Left .contact-Left-Text-2 {
+  padding: 0;
+  margin: 0;
+  font-family: "Nunito", sans-serif;
+  color: rgb(172, 170, 170);
+  font-size: 1rem;
+  font-weight: 600;
 }
 
 /*# sourceMappingURL=style.css.map */
