added styling to contact-Right

--- a/src/style.css
+++ b/src/style.css
@@ -545,7 +545,7 @@ body {
   }
 }
 .contact {
-  height: 25vh;
+  height: 15vh;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -558,7 +558,7 @@ body {
   flex-direction: row;
   text-align: center;
   align-items: center;
-  width: 70%;
+  width: 65%;
   height: 90%;
   justify-content: space-between;
 }
@@ -587,6 +587,18 @@ body {
   color: rgb(172, 170, 170);
   font-size: 1rem;
   font-weight: 600;
+}
+.contact .contact-Wrap .contact-Right {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  width: 250px;
+  height: 50px;
 }
 
 /*# sourceMappingURL=style.css.map */
