--- a/src/style.css
+++ b/src/style.css
@@ -588,17 +588,26 @@ body {
   font-size: 1rem;
   font-weight: 600;
 }
-.contact .contact-Wrap .contact-Right {
+.contact .contact-Wrap .contact-Right,
+.contact .contact-Wrap .contact-Right-Input-Wrap {
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
   justify-content: center;
   position: relative;
-  padding: 0;
-  margin: 0;
   width: 250px;
   height: 50px;
+}
+.contact .contact-Wrap .contact-Right .contact-Right-Text-Input,
+.contact .contact-Wrap .contact-Right-Input-Wrap .contact-Right-Text-Input {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-left: 15px;
+  margin: 0;
+  outline: none;
+  border: none;
 }
 
 /*# sourceMappingURL=style.css.map */
