--- a/src/style.css
+++ b/src/style.css
@@ -609,5 +609,16 @@ body {
   outline: none;
   border: none;
 }
+.contact .contact-Wrap .contact-Right .contact-Right-Btn,
+.contact .contact-Wrap .contact-Right-Input-Wrap .contact-Right-Btn {
+  position: absolute;
+  height: 45px;
+  width: 45px;
+  right: 0;
+  color: #838512;
+  background-color: #333;
+  border: none;
+  font-size: 1.5rem;
+}
 
 /*# sourceMappingURL=style.css.map */
