added responsvness size 1150px to the contact and contact wrap

--- a/src/style.css
+++ b/src/style.css
@@ -627,4 +627,10 @@ body {
   transform: scale(0.9);
 }
 
+@media screen and (max-width: 1150px) {
+  .contact .contact-Wrap {
+    width: 95%;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
