finished styling and adding contact

--- a/src/style.scss
+++ b/src/style.scss
@@ -533,7 +533,9 @@ body {
           height: 250px;
           width: 400px;
           border: solid white 2px;
-          box-shadow: 0.2rem 0.3rem #2748ff, 0.3rem 0.4rem #851212,
+          box-shadow:
+            0.2rem 0.3rem #2748ff,
+            0.3rem 0.4rem #851212,
             0.4rem 0.5rem #838512;
           position: relative;
           display: flex;
@@ -605,7 +607,9 @@ body {
         }
 
         .menu-Card:hover {
-          box-shadow: 0.2rem 0.5rem 0.4rem #2748ff, 0.3rem 0.5rem 0.5rem #851212,
+          box-shadow:
+            0.2rem 0.5rem 0.4rem #2748ff,
+            0.3rem 0.5rem 0.5rem #851212,
             0.4rem 0.5rem 0.6rem #838512;
           transform: translateY(-5%);
           cursor: pointer;
@@ -801,7 +805,6 @@ body {
         .contact-Right-Btn {
           height: 25px;
           width: 25px;
-
           font-size: 1rem;
         }
       }
