--- a/src/style.scss
+++ b/src/style.scss
@@ -814,4 +814,15 @@ body {
   text-align: center;
   align-items: center;
   justify-content: center;
+  height: 8vh;
+
+  .footer-Wrap {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 95%;
+    height: 95%;
+  }
 }
