--- a/src/style.scss
+++ b/src/style.scss
@@ -815,6 +815,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 8vh;
+  background-color: #222;
 
   .footer-Wrap {
     display: flex;
@@ -824,5 +825,13 @@ body {
     justify-content: center;
     width: 95%;
     height: 95%;
+
+    .footer-Text-1 {
+      font-family: $fontThree;
+      font-size: 1.3rem;
+      font-weight: 500;
+
+      color: aliceblue;
+    }
   }
 }
